<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/menu_task4"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task4" />
        <item
            android:id="@+id/menu_task5"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task5" />
        <item
            android:id="@+id/menu_task6"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task6" />


        <item
            android:id="@+id/menu_task7"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task7" />


        <item
            android:id="@+id/menu_task8"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task8" />


        <item
            android:id="@+id/menu_task9"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task9" />


        <item
            android:id="@+id/menu_task10"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task10" />


        <item
            android:id="@+id/menu_task11"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task11" />


        <item
            android:id="@+id/menu_task12"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task12" />



        <item
            android:id="@+id/menu_task13"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task14" />
        <item
            android:id="@+id/menu_task14"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task14" />


        <item
            android:id="@+id/menu_task15"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task15" />


        <item
            android:id="@+id/menu_task16"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task16" />


        <item
            android:id="@+id/menu_task17"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task17" />


        <item
            android:id="@+id/menu_task18"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_task18" />


    </group>
</menu>